create function to extract & load microgrid data

--- a/0-microgrid-data-preprocessing.ipynb
+++ b/0-microgrid-data-preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,21 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(dir, 'building_attributes.json'),'r') as f:\n",
-    "    solar = re.findall('(?<=\"Solar_Power_Installed\\(kW\\)\":)\\d+',f.read())\n",
-    "    solar = [int(s) for s in solar]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# demand data\n",
     "for filename in os.listdir(dir):\n",
     "    if not filename.startswith('Building_'):\n",
     "        continue\n",
@@ -50,134 +40,76 @@
     "        df.drop(df.columns[2:10], axis=1, inplace=True)\n",
     "    else:\n",
     "        temp = pd.read_csv(filepath)\n",
-    "        df['NSLoad'] += temp.iloc[:,7]+temp.iloc[:,8]+temp.iloc[:,9]"
+    "        df['NSLoad'] += temp.iloc[:,7]+temp.iloc[:,8]+temp.iloc[:,9]\n",
+    "\n",
+    "# solar installed data\n",
+    "filepath = os.path.join(dir, 'building_attributes_base.json')\n",
+    "with open(filepath,'r') as f:\n",
+    "    solar = re.findall('(?<=\"Solar_Power_Installed\\(kW\\)\":)\\d+',f.read())\n",
+    "    solar = [int(s) for s in solar]\n",
+    "    \n",
+    "# solar generation data\n",
+    "filepath = os.path.join(dir, 'solar_generation_1kW.csv')\n",
+    "temp = pd.read_csv(filepath)\n",
+    "df['SolarGen'] = 0\n",
+    "for val in solar:\n",
+    "    df['SolarGen'] += val*temp.iloc[:,1]/100\n",
+    "\n",
+    "# rates\n",
+    "# filepath = os.path.join(dir, 'prices.csv')\n",
+    "# temp = pd.read_csv(filepath)\n",
+    "# temp.drop(temp.columns[5:8],axis=1,inplace=True)\n",
+    "# temp['DayType'] = temp['Day Type']\n",
+    "# temp = temp.groupby(['Month','DayType','Hour'])['Electricity Pricing [$]'].mean().reset_index()\n",
+    "# df = pd.merge(df, temp, on=['Month','DayType','Hour'],how='left')\n",
+    "filepath = os.path.join(dir, 'prices.csv')\n",
+    "temp = pd.read_csv(filepath)\n",
+    "df['Price'] = temp.iloc[:,0]\n",
+    "\n",
+    "# weather data\n",
+    "filepath = os.path.join(dir, 'weather_data.csv')\n",
+    "temp = pd.read_csv(filepath)\n",
+    "df = pd.concat([df,temp],axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Month                 int64\n",
-      "Hour                  int64\n",
-      "DayType            category\n",
-      "DaylightSavings    category\n",
-      "NSLoad              float64\n",
+      "Month                                                int64\n",
+      "Hour                                                 int64\n",
+      "DayType                                           category\n",
+      "DaylightSavings                                   category\n",
+      "NSLoad                                             float64\n",
+      "SolarGen                                           float64\n",
+      "Price                                              float64\n",
+      "Outdoor Drybulb Temperature [C]                    float64\n",
+      "Outdoor Relative Humidity [%]                      float64\n",
+      "Diffuse Solar Radiation [W/m2]                     float64\n",
+      "Direct Solar Radiation [W/m2]                      float64\n",
+      "6h Prediction Outdoor Drybulb Temperature [C]      float64\n",
+      "12h Prediction Outdoor Drybulb Temperature [C]     float64\n",
+      "24h Prediction Outdoor Drybulb Temperature [C]     float64\n",
+      "6h Prediction Outdoor Relative Humidity [%]        float64\n",
+      "12h Prediction Outdoor Relative Humidity [%]       float64\n",
+      "24h Prediction Outdoor Relative Humidity [%]       float64\n",
+      "6h Prediction Diffuse Solar Radiation [W/m2]       float64\n",
+      "12h Prediction Diffuse Solar Radiation [W/m2]      float64\n",
+      "24h Prediction Diffuse Solar Radiation [W/m2]      float64\n",
+      "6h Prediction Direct Solar Radiation [W/m2]        float64\n",
+      "12h Prediction Direct Solar Radiation [W/m2]       float64\n",
+      "24h Prediction Direct Solar Radiation [W/m2]       float64\n",
       "dtype: object\n"
      ]
     }
    ],
    "source": [
     "print(df.dtypes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Hour</th>\n",
-       "      <th>NSLoad</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>35040.000000</td>\n",
-       "      <td>35040.000000</td>\n",
-       "      <td>35040.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>6.526027</td>\n",
-       "      <td>12.500000</td>\n",
-       "      <td>402.229136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>3.447901</td>\n",
-       "      <td>6.922285</td>\n",
-       "      <td>289.517056</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>47.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>6.750000</td>\n",
-       "      <td>173.960000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>12.500000</td>\n",
-       "      <td>296.020000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>18.250000</td>\n",
-       "      <td>602.722500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>1273.660000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Month          Hour        NSLoad\n",
-       "count  35040.000000  35040.000000  35040.000000\n",
-       "mean       6.526027     12.500000    402.229136\n",
-       "std        3.447901      6.922285    289.517056\n",
-       "min        1.000000      1.000000     47.500000\n",
-       "25%        4.000000      6.750000    173.960000\n",
-       "50%        7.000000     12.500000    296.020000\n",
-       "75%       10.000000     18.250000    602.722500\n",
-       "max       12.000000     24.000000   1273.660000"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.describe()"
    ]
   }
  ],
