--- a/0-microgrid-data-preprocessing.ipynb
+++ b/0-microgrid-data-preprocessing.ipynb
@@ -23,24 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# demand data\n",
+    "n = 1\n",
     "for filename in os.listdir(dir):\n",
     "    if not filename.startswith('Building_'):\n",
     "        continue\n",
     "    filepath = os.path.join(dir, filename)\n",
     "    if filename=='Building_1.csv':\n",
     "        df = pd.read_csv(filepath)\n",
-    "        df['DayType'] = df['Day Type'].astype('int64').astype('category')\n",
+    "        df['DayType'] = df['Day Type'].astype('int64').replace({2:'Mon',3:'Tue',4:'Wed',5:'Thu',6:'Fri',7:'Sat',8:'Holiday',1:'Sun'}).astype('category')\n",
     "        df['DaylightSavings'] = df['Daylight Savings Status'].astype('int64').astype('category')\n",
-    "        df['NSLoad'] = df.iloc[:,7]+df.iloc[:,8]+df.iloc[:,9]\n",
+    "        df['Load'] = df.iloc[:,7]+df.iloc[:,8]+df.iloc[:,9]\n",
+    "        df[f'Load_{n}'] = df.iloc[:,7]+df.iloc[:,8]+df.iloc[:,9]\n",
     "        df.drop(df.columns[2:10], axis=1, inplace=True)\n",
     "    else:\n",
     "        temp = pd.read_csv(filepath)\n",
-    "        df['NSLoad'] += temp.iloc[:,7]+temp.iloc[:,8]+temp.iloc[:,9]\n",
+    "        df['Load'] += temp.iloc[:,7]+temp.iloc[:,8]+temp.iloc[:,9]\n",
+    "        df[f'Load_{n}'] = temp.iloc[:,7]+temp.iloc[:,8]+temp.iloc[:,9]\n",
+    "    n += 1\n",
     "\n",
     "# solar installed data\n",
     "filepath = os.path.join(dir, 'building_attributes_base.json')\n",
