by hour by month plots

--- a/0-microgrid-data-preprocessing.ipynb
+++ b/0-microgrid-data-preprocessing.ipynb
@@ -36,6 +36,7 @@
     "    if filename=='Building_1.csv':\n",
     "        df = pd.read_csv(filepath)\n",
     "        df['DayType'] = df['Day Type'].astype('int64').replace({2:'Mon',3:'Tue',4:'Wed',5:'Thu',6:'Fri',7:'Sat',8:'Holiday',1:'Sun'}).astype('category')\n",
+    "        df['Month'] = df['Month'].astype('category')\n",
     "        df['DaylightSavings'] = df['Daylight Savings Status'].astype('int64').astype('category')\n",
     "        df['Load'] = df.iloc[:,7]+df.iloc[:,8]+df.iloc[:,9]\n",
     "        df[f'Load_{n}'] = df.iloc[:,7]+df.iloc[:,8]+df.iloc[:,9]\n",
