--- a/2-models.ipynb
+++ b/2-models.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m pip install statsforecast"
+    "#!python -m pip install statsforecast"
    ]
   },
   {
