point fcst models

--- a/0-microgrid-data-preprocessing.ipynb
+++ b/0-microgrid-data-preprocessing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,7 @@
     "        df = pd.read_csv(filepath)\n",
     "        df['DayType'] = df['Day Type'].astype('int64').replace({2:'Mon',3:'Tue',4:'Wed',5:'Thu',6:'Fri',7:'Sat',8:'Holiday',1:'Sun'}).astype('category')\n",
     "        df['Month'] = df['Month'].astype('category')\n",
+    "        df['Workday'] = df['DayType'].apply(lambda x: False if x in ['Sat','Sun','Holiday'] else True)\n",
     "        df['DaylightSavings'] = df['Daylight Savings Status'].astype('int64').astype('category')\n",
     "        df['Load'] = df.iloc[:,7]+df.iloc[:,8]+df.iloc[:,9]\n",
     "        df[f'Load_{n}'] = df.iloc[:,7]+df.iloc[:,8]+df.iloc[:,9]\n",
@@ -48,17 +49,33 @@
     "    n += 1\n",
     "\n",
     "# solar installed data\n",
-    "filepath = os.path.join(dir, 'building_attributes_base.json')\n",
+    "filepath = os.path.join(dir, 'building_attributes.json')\n",
     "with open(filepath,'r') as f:\n",
-    "    solar = re.findall('(?<=\"Solar_Power_Installed\\(kW\\)\":)\\d+',f.read())\n",
-    "    solar = [int(s) for s in solar]\n",
+    "    power_installed = re.findall('(?<=\"Solar_Power_Installed\\(kW\\)\":)\\d+',f.read())\n",
+    "    power_installed = [int(s) for s in power_installed]\n",
     "    \n",
     "# solar generation data\n",
     "filepath = os.path.join(dir, 'solar_generation_1kW.csv')\n",
     "temp = pd.read_csv(filepath)\n",
     "df['SolarGen'] = 0\n",
-    "for val in solar:\n",
-    "    df['SolarGen'] += val*temp.iloc[:,1]/100\n",
+    "for val in power_installed:\n",
+    "    df['SolarGen'] += val*temp.iloc[:,1]/1000\n",
+    "\n",
+    "# net load\n",
+    "df['NetLoad'] = df['Load'] - df['SolarGen']\n",
+    "df['NetLoadLag'] = df['NetLoad'].shift(1)\n",
+    "df['NetLoadLag2'] = df['NetLoad'].shift(2)\n",
+    "df['NetLoadLag3'] = df['NetLoad'].shift(3)\n",
+    "df['NetLoadLag4'] = df['NetLoad'].shift(4)\n",
+    "df['NetLoadLag5'] = df['NetLoad'].shift(5)\n",
+    "df['NetLoadLag6'] = df['NetLoad'].shift(6)\n",
+    "df['NetLoadLag22'] = df['NetLoad'].shift(24)\n",
+    "df['NetLoadLag23'] = df['NetLoad'].shift(24)\n",
+    "df['NetLoadLag24'] = df['NetLoad'].shift(24)\n",
+    "df['NetLoadLag48'] = df['NetLoad'].shift(48)\n",
+    "df['NetLoadMax24'] = df['NetLoad'].rolling(window=24, min_periods=1).max()\n",
+    "df['NetLoadMin24'] = df['NetLoad'].rolling(window=24, min_periods=1).min()\n",
+    "df['NetLoadDiff24'] = df['NetLoad'].diff(24)\n",
     "\n",
     "# rates\n",
     "# filepath = os.path.join(dir, 'prices.csv')\n",
@@ -74,41 +91,101 @@
     "# weather data\n",
     "filepath = os.path.join(dir, 'weather_data.csv')\n",
     "temp = pd.read_csv(filepath)\n",
-    "df = pd.concat([df,temp],axis=1)"
+    "df = pd.concat([df,temp],axis=1)\n",
+    "\n",
+    "df['Radiation [W/m2]'] = df['Diffuse Solar Radiation [W/m2]'] + df['Direct Solar Radiation [W/m2]']\n",
+    "df['6h Prediction Radiation [W/m2]'] = df['6h Prediction Diffuse Solar Radiation [W/m2]'] + df['6h Prediction Direct Solar Radiation [W/m2]']\n",
+    "df['12h Prediction Radiation [W/m2]'] = df['12h Prediction Diffuse Solar Radiation [W/m2]'] + df['12h Prediction Direct Solar Radiation [W/m2]']\n",
+    "df['24h Prediction Radiation [W/m2]'] = df['24h Prediction Diffuse Solar Radiation [W/m2]'] + df['24h Prediction Direct Solar Radiation [W/m2]']\n",
+    "df['TempLag'] = df['Outdoor Drybulb Temperature [C]'].shift(1)\n",
+    "df['TempLag2'] = df['Outdoor Drybulb Temperature [C]'].shift(2)\n",
+    "df['TempLag3'] = df['Outdoor Drybulb Temperature [C]'].shift(3)\n",
+    "df['TempLag22'] = df['Outdoor Drybulb Temperature [C]'].shift(22)\n",
+    "df['TempLag23'] = df['Outdoor Drybulb Temperature [C]'].shift(23)\n",
+    "df['TempLag24'] = df['Outdoor Drybulb Temperature [C]'].shift(24)\n",
+    "df['TempMean24'] = df['Outdoor Drybulb Temperature [C]'].rolling(window=24, min_periods=1).mean()\n",
+    "df['TempMean1W'] = df['Outdoor Drybulb Temperature [C]'].rolling(window=168, min_periods=21).mean()\n",
+    "\n",
+    "# dummy timestamp for easier reference\n",
+    "df['Timestamp'] = pd.date_range(start='2016-01-01 01:00', periods=4*365*24, freq='h')\n",
+    "\n",
+    "# move predictions for time t to observation t\n",
+    "for h in [6,12,24]:    \n",
+    "    for id in [index for index, col in enumerate(df.columns) if str(h)+'h Prediction' in col]:\n",
+    "        df.iloc[h:df.shape[0],id] = df.iloc[0:df.shape[0]-h,id]\n",
+    "        \n",
+    "# drop first 48 hours due to missing data\n",
+    "df = df.iloc[48:]\n",
+    "df = df.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data.csv',index=False)\n",
+    "# df_train = df.iloc[0:24*365*2,:]\n",
+    "# df_val = df.iloc[24*365*2:24*365*3,:]\n",
+    "# df_test = df.iloc[24*365*3:df.shape[0],:]\n",
+    "# df_train.to_csv('data_train.csv',index=False)\n",
+    "# df_val.to_csv('data_val.csv',index=False)\n",
+    "# df_test.to_csv('data_test.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Month                                                int64\n",
-      "Hour                                                 int64\n",
-      "DayType                                           category\n",
-      "DaylightSavings                                   category\n",
-      "NSLoad                                             float64\n",
-      "SolarGen                                           float64\n",
-      "Price                                              float64\n",
-      "Outdoor Drybulb Temperature [C]                    float64\n",
-      "Outdoor Relative Humidity [%]                      float64\n",
-      "Diffuse Solar Radiation [W/m2]                     float64\n",
-      "Direct Solar Radiation [W/m2]                      float64\n",
-      "6h Prediction Outdoor Drybulb Temperature [C]      float64\n",
-      "12h Prediction Outdoor Drybulb Temperature [C]     float64\n",
-      "24h Prediction Outdoor Drybulb Temperature [C]     float64\n",
-      "6h Prediction Outdoor Relative Humidity [%]        float64\n",
-      "12h Prediction Outdoor Relative Humidity [%]       float64\n",
-      "24h Prediction Outdoor Relative Humidity [%]       float64\n",
-      "6h Prediction Diffuse Solar Radiation [W/m2]       float64\n",
-      "12h Prediction Diffuse Solar Radiation [W/m2]      float64\n",
-      "24h Prediction Diffuse Solar Radiation [W/m2]      float64\n",
-      "6h Prediction Direct Solar Radiation [W/m2]        float64\n",
-      "12h Prediction Direct Solar Radiation [W/m2]       float64\n",
-      "24h Prediction Direct Solar Radiation [W/m2]       float64\n",
+      "Month                                                   category\n",
+      "Hour                                                       int64\n",
+      "DayType                                                 category\n",
+      "Workday                                                     bool\n",
+      "DaylightSavings                                         category\n",
+      "Load                                                     float64\n",
+      "Load_1                                                   float64\n",
+      "Load_2                                                   float64\n",
+      "Load_3                                                   float64\n",
+      "Load_4                                                   float64\n",
+      "Load_5                                                   float64\n",
+      "Load_6                                                   float64\n",
+      "Load_7                                                   float64\n",
+      "Load_8                                                   float64\n",
+      "Load_9                                                   float64\n",
+      "SolarGen                                                 float64\n",
+      "NetLoad                                                  float64\n",
+      "Price                                                    float64\n",
+      "Outdoor Drybulb Temperature [C]                          float64\n",
+      "Outdoor Relative Humidity [%]                            float64\n",
+      "Diffuse Solar Radiation [W/m2]                           float64\n",
+      "Direct Solar Radiation [W/m2]                            float64\n",
+      "6h Prediction Outdoor Drybulb Temperature [C]            float64\n",
+      "12h Prediction Outdoor Drybulb Temperature [C]           float64\n",
+      "24h Prediction Outdoor Drybulb Temperature [C]           float64\n",
+      "6h Prediction Outdoor Relative Humidity [%]              float64\n",
+      "12h Prediction Outdoor Relative Humidity [%]             float64\n",
+      "24h Prediction Outdoor Relative Humidity [%]             float64\n",
+      "6h Prediction Diffuse Solar Radiation [W/m2]             float64\n",
+      "12h Prediction Diffuse Solar Radiation [W/m2]            float64\n",
+      "24h Prediction Diffuse Solar Radiation [W/m2]            float64\n",
+      "6h Prediction Direct Solar Radiation [W/m2]              float64\n",
+      "12h Prediction Direct Solar Radiation [W/m2]             float64\n",
+      "24h Prediction Direct Solar Radiation [W/m2]             float64\n",
+      "Radiation [W/m2]                                         float64\n",
+      "6h Prediction Radiation [W/m2]                           float64\n",
+      "12h Prediction Radiation [W/m2]                          float64\n",
+      "24h Prediction Radiation [W/m2]                          float64\n",
+      "TempLag                                                  float64\n",
+      "TempLag2                                                 float64\n",
+      "TempLag3                                                 float64\n",
+      "TempLag24                                                float64\n",
+      "Timestamp                                         datetime64[ns]\n",
       "dtype: object\n"
      ]
     }
